Coloquei o Trabalho Pratico 3 para o pessoal de PC2 e atualizei informacoes do Trabalho 2

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -84,8 +84,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(para o dia 31/10/2019)</b><a href="aulas/lab-poo/TP1.pdf"> - <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 20 pts <b>(para o dia 24/10/2019)</b><a href="aulas/lab-poo/Prática 6.pdf"> - <i> Exercício Prático 6 </i></a></li>
+					<li>Trabalho 1 - 40 pts <b>(para o dia 31/10/2019)</b><a href="aulas/lab-poo/TP1.pdf"> - <i> Trabalho 1 </i></a></li>
+					<li>Trabalho 2 - 20 pts <b>(para o dia 24/10/2019)</b><a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a></li>
+					<li>Trabalho 3 - 40 pts <b>(para o dia 05/12/2019)</b><a href="aulas/lab-poo/TP3.pdf"> - <i> Trabalho 3 </i></a></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
