--- a/gsi526.html
+++ b/gsi526.html
@@ -115,6 +115,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Padrões Arquiteturais.pptx"> Aula 14 - Padrões Arquiteturais </a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - SistemasControleDeVersao.pdf"> Aula 15 - Sistemas de Controle de Versão </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 16 - Git.pdf"> Aula 16 - Controle de Versão com o Git</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 17 - Qualidade de Software.pptx"> Aula 17 - Qualidade de Software (Débito Técnico)</a></button></li>				
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
@@ -155,6 +156,8 @@
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> <img src="images/new2.gif" alt="" height="11" width="28"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas da Prova 2</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Grupos do Trabalho</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_seminario.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Grupos do Seminário</b></a></button></li>
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
