coloquei uma app exemplo em node.js e react.js

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -129,6 +129,7 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					</ul>
 					</div>
 				</div>
