coloquei as notas parciais de pc2

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -144,10 +144,10 @@
 						</ul>
 					</div>
 					<div>
-					<b>Código-fonte das aulas:</b>
+					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/pc2-parte1.zip"> Exercícios Lab. Parte 1</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li> -->
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Parciais </b></a></li> 
 					</ul>
 					</div>
 				</div>
