--- a/poo.html
+++ b/poo.html
@@ -101,8 +101,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/11.Noções de UML.ppt"> Aula 11 - Noções de UML</a></li> -->
+						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.Noções de UML.ppt"> Aula 11 - Noções de UML</a></li> -->
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
