livros sobre tecnologias

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -132,6 +132,16 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					</ul>
 					</div>
+					<div>
+					<b>Livros:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/AngularJS-Essentials.pdf" target="_blank"> <i> Angular JS Essentials </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/React-Quickly.pdf" target="_blank"> <i>React Quickly </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/The-Road-to-learn-React.pdf" target="_blank"> <i> The Road to Learn React </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Node.js-Web-Development.pdf" target="_blank"> <i> Node.js Web Development </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Google-Web-Toolkit-book.pdf" target="_blank"> <i> Google Web Toolkit: A practical guide </i></a></li>
+					</ul>
+					</div>
 				</div>
 			</div>
 		</div>
