coloquei uns livros sobre Django

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -140,6 +140,8 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/The-Road-to-learn-React.pdf" target="_blank"> <i> The Road to Learn React </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Node.js-Web-Development.pdf" target="_blank"> <i> Node.js Web Development </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Google-Web-Toolkit-book.pdf" target="_blank"> <i> Google Web Toolkit: A practical guide </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-Cookbook.pdf" target="_blank"> <i> Django Cookbook </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-2.pdf" target="_blank"> <i> Django 2 </i></a></li>					
 					</ul>
 					</div>
 				</div>
