adicionei a aula de padroes GoF e a matéria da prova 3

--- a/gsi526.html
+++ b/gsi526.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(05/09)</b> - <i>Aulas 1, 2, 3 e 4</i></li>
 					<li>Prova 2 - 25 pts <b>(17/10)</b> - <i>Aulas 5, 6, 7, 8 e 9</i></li>
-					<li>Prova 3 - 30 pts <b>(21/11)</b></li>
+					<li>Prova 3 - 30 pts <b>(21/11)</b> - <i>Aulas 10, 11, 12, 13, 14, 15, 16, 17, 18 e 19</i></li>
 					<li>Listas - 5 pts <b>(17/10 e 21/11)</b></li>
 					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
 					</ul>
@@ -117,30 +117,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 16 - Git.pdf"> Aula 16 - Controle de Versão com o Git</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 17 - Qualidade de Software.pptx"> Aula 17 - Qualidade de Software (Débito Técnico)</a></button></li>				
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 18 - Idiomas de Programação.pdf"> Aula 18 - Idiomas de Programação</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - Membros de Classes.pdf"> Aula 15 - Membros de Classes</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/PadroesGoF.pdf"> Aula 16 - Padrões de Projeto</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/lista_exercicios_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista de Exercícios</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/slides_seminarios.rar"> <img src="images/new2.gif" alt="" height="11" width="28"> Slides dos Seminários</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software </a></button></li>						
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Verificação, Validação e Teste de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula11 - Conceitos de POO.pdf"> Aula 11 - Conceitos de POO</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula12 - Classes E Relacionamentos.pdf"> Aula 12 - Classes e Relacionamentos </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula13 - Membros de Classes.pdf"> Aula 13 - Membros de Classes </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 19 - Padrões de Projeto.pdf"> Aula 19 - Padrões de Projeto</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7.pdf"> Aula 7</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8.pdf"> Aula 8</a></button></li>
