--- a/poo.html
+++ b/poo.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(10/09)</b> - <i>Aulas 1, 2 e 3</i></li>
 					<li>Prova 2 - 35 pts <b>(22/10)</b> - <i>Aulas 4, 5, 6 e 7</i></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b></li>					
+					<li>Prova 3 - 35 pts <b>(26/11)</b> - <i>Aulas 8, 9, 10, 11 e 12</i></li>					
 					</ul>
 					</div>
 					<b>Material:</b>
@@ -102,7 +102,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.Noções de UML.ppt"> Aula 11 - Noções de UML</a></li> -->
+						<li><i class="icon-book"></i><a href="aulas/poo/11.Idiomas de Programação.pdf"> Aula 11 - Idiomas de Programação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a></li> 						
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
