--- a/poo-lab.html
+++ b/poo-lab.html
@@ -146,6 +146,7 @@
 					<div>
 					<b>Links diversos:</b>
 					<ul>
+					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Java Como Programar 6 ed. (Deitel) </i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/pc2-parte1.zip"> Exercícios Lab. Parte 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Parciais </b></a></li> 
 					</ul>
