--- a/poo.html
+++ b/poo.html
@@ -139,6 +139,7 @@
 					<div>
 					<b>Links diversos:</b>
 					<ul>
+					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Java Como Programar 6 ed. (Capítulos: 9, 10, 13 e 19) </i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2019_new.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Prova 2</b></a></button></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/P1-HealthWatcher.pdf"> Documento de Requisitos: <i>Health-Watcher</i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li> -->
