--- a/gsi526.html
+++ b/gsi526.html
@@ -133,6 +133,7 @@
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova2.pdf"> Lista para a Prova 2</a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista para a Prova 3</a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Gabarito da Lista 3</a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> <img src="images/new2.gif" alt="" height="11" width="28"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas da Prova 2</b></a></button></li>
