coloquei as notas do trab. (fase 1)

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -110,6 +110,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/sistema_reserva.pdf"> Diagrama de Classe do Trabalho </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_trabalho.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Relação dos Grupos do Trabalho</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Ordem de Apresentação dos Grupos</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_es_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas do Trabalho (Fase 1)</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li>-->
