notas da prova 3 de ES

--- a/gsi526.html
+++ b/gsi526.html
@@ -136,11 +136,10 @@
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <b>Notas da Prova 2</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_seminario.pdf"> <b>Grupos do Seminário</b></a></button></li>
-										<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_ordem_apresentacao.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Ordem de Apresentação (Seminário)</b></a></button></li>
-
+					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_ordem_apresentacao.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Ordem de Apresentação (Seminário)</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas da Prova 3</b></a></button></li>
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
