coloquei as datas das provas das disciplinas de ES e PC2 para o primeiro semestre de 2020

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2019 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2020 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 			</div>
 		</div>
@@ -84,16 +84,15 @@
 					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Imobiliária - 20 pts <b>(27/11)</b></li>
-					<li>Sistema de Reserva de Hotéis e Passagens Aéreas - 80 pts</li>
+					<li>Trabalho 1 - 20 pts <b>(08/04)</b></li>
+					<li>Trabalho 2 - 80 pts</li>
 						<ul>
-						<li>Definição dos grupos <b>(até 30/09)</b></li>
-						<li>Entrega da primeira fase <b>(até 20/11)</b></li>
-						<li>Arguição dos grupos <b>(20/11)</b></li>
-						<li>Entrega da segunda fase <b>(04/12)</b></li>
+						<li>Definição dos grupos <b>(até 22/04)</b></li>
+						<li>Entrega da primeira fase e Arguição <b>(20/05)</b></li>
+						<li>Entrega da segunda fase e Arguição <b>(17/06)</b></li>
 						</ul>
 					</ul>
-					</div> 
+					<!--</div> 
 					<b>Material:</b>
 					<div>
 						<ul>
@@ -114,10 +113,10 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_es_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li>-->
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li>
 						</ul>
-					</div>
-					<div>
+					</div> -->
+					<!-- <div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/mars/2/eclipse-jee-mars-2-linux-gtk-x86_64.tar.gz" target="_blank">Link do Eclipse IDE Mars 2</a></li>
@@ -133,7 +132,7 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					</ul>
-					</div>
+					</div> -->
 					<div>
 					<b>Livros:</b>
 					<ul>
