--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2019 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2020 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 			</div>
 		</div>
@@ -84,18 +84,20 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(05/09)</b> - <i>Aulas 1, 2, 3 e 4</i></li>
-					<li>Prova 2 - 25 pts <b>(17/10)</b> - <i>Aulas 5, 6, 7, 8 e 9</i></li>
-					<li>Prova 3 - 30 pts <b>(21/11)</b> - <i>Aulas 10, 11, 12, 13, 14, 15, 16, 17, 18 e 19</i></li>
-					<li>Listas - 5 pts <b>(17/10 e 21/11)</b></li>
-					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
+					<li>Prova 1 - 25 pts <b>(30/03)</b></li>
+					<li>Prova 2 - 30 pts <b>(04/05)</b></li>
+					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
+					<li>Lista 1 - 1,5 pts <b>(30/03)</b></i></li>
+					<li>Lista 2 - 1,5 pts <b>(04/05)</b></i></li>
+					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
+					<li>Seminário - 10 pts <b>(18/06, 22/06 e 25/06)</b></li>
 					</ul>
 					</div>
 					<div>
 						<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - O Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
@@ -128,9 +130,9 @@
 						</ul>
 					</div>
 					<div>
-					<b>Links diversos:</b>
+					<!--<b>Links diversos:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
+					 <li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova2.pdf"> Lista para a Prova 2</a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
