--- a/poo-lab.html
+++ b/poo-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2019 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2020 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 			</div>
 		</div>
@@ -84,9 +84,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 40 pts <b>(para o dia 31/10/2019)</b><a href="aulas/lab-poo/TP1.pdf"> - <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 20 pts <b>(para o dia 24/10/2019)</b><a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a></li>
-					<li>Trabalho 3 - 40 pts <b>(para o dia 05/12/2019)</b><a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a></li>
+					<li>Trabalho 1 - 20 pts <b>(26/03)</b><!--<a href="aulas/lab-poo/TP1.pdf"> - <i> Trabalho 1 </i></a>--></li>
+					<li>Trabalho 2 - 35 pts <b>(07/05)</b><!--<a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a>--></li>
+					<li>Trabalho 3 - 45 pts <b>(18/06)</b><!--<a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a>--></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
@@ -95,14 +95,14 @@
 					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
@@ -143,7 +143,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula10.pdf"> Aula 10</a></li>-->
 						</ul>
 					</div>
-					<div>
+					<!-- <div>
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Java Como Programar 6 ed. (Deitel) </i></a></li> 
@@ -151,7 +151,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> 
 					</ul>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
