--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2019 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2020 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -84,16 +84,16 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(10/09)</b> - <i>Aulas 1, 2 e 3</i></li>
-					<li>Prova 2 - 35 pts <b>(22/10)</b> - <i>Aulas 4, 5, 6 e 7</i></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b> - <i>Aulas 8, 9, 10, 11 e 12</i></li>					
+					<li>Prova 1 - 30 pts <b>(31/03)</b></li>
+					<li>Prova 2 - 35 pts <b>(05/05)</b></li>
+					<li>Prova 3 - 35 pts <b>(16/06)</b></li>					
 					</ul>
 					</div>
 					<b>Material:</b>
 					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 1 - Introdução</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 2 - Conceitos de POO</a></li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 2 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
@@ -136,16 +136,16 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/aula10.pdf"> Aula 10</a></li>-->
 						</ul>
 					</div>
-					<div>
+					<!-- <div>
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Java Como Programar 6 ed. (Capítulos: 9, 10, 13 e 19) </i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2019_new.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas da Prova 3</b></a></button></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/P1-HealthWatcher.pdf"> Documento de Requisitos: <i>Health-Watcher</i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li> -->
+					<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li> 
 					</ul>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
