coloquei um livro de TypeScript no site

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -136,6 +136,7 @@
 					<div>
 					<b>Livros:</b>
 					<ul>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Pro-TypeScript.pdf" target="_blank"> <i> Pro TypeScript: Application-Scale JavaScript Development </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/AngularJS-Essentials.pdf" target="_blank"> <i> Angular JS Essentials </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/React-Quickly.pdf" target="_blank"> <i>React Quickly </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/The-Road-to-learn-React.pdf" target="_blank"> <i> The Road to Learn React </i></a></li>
