--- a/gsi526.html
+++ b/gsi526.html
@@ -90,7 +90,7 @@
 					<li>Lista 1 - 1,5 pts <b>(30/03)</b></i></li>
 					<li>Lista 2 - 1,5 pts <b>(04/05)</b></i></li>
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
-					<li>Seminário - 10 pts <b>(18/06, 22/06 e 25/06)</b></li>
+					<li>Seminário - 10 pts <b>(18/06 e 22/06)</b></li>
 					</ul>
 					</div>
 					<div>
