aulas sobre ES lab, tais como calculo de IMC

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -92,14 +92,15 @@
 						<li>Entrega da segunda fase e Arguição <b>(17/06)</b></li>
 						</ul>
 					</ul>
-					<!--</div> 
+					</div> 
 					<b>Material:</b>
 					<div>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 3 - Plugin do GWT (Instalação) </a></button></li>
-						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 02 - Plugin do GWT (Instalação) </a></button></li>
+						<!-- <li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React #1 - Preparando o ambiente para desenvolvimento </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 1) </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=1mLbR-TbNdM" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 2) </b></a></li>
@@ -113,16 +114,16 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_es_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li>
-						</ul>
-					</div> -->
-					<!-- <div>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> -->
+						</ul> 
+					</div> 
+					<div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/mars/2/eclipse-jee-mars-2-linux-gtk-x86_64.tar.gz" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
+					<!-- <li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/HelloWorld.zip"> Hello World GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
@@ -130,20 +131,20 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li> -->
 					</ul>
-					</div> -->
+					</div> 
 					<div>
 					<b>Livros:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Pro-TypeScript.pdf" target="_blank"> <i> Pro TypeScript: Application-Scale JavaScript Development </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Google-Web-Toolkit-book.pdf" target="_blank"> <i> Google Web Toolkit: A practical guide </i></a></li>
+					<!-- <li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Pro-TypeScript.pdf" target="_blank"> <i> Pro TypeScript: Application-Scale JavaScript Development </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/AngularJS-Essentials.pdf" target="_blank"> <i> Angular JS Essentials </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/React-Quickly.pdf" target="_blank"> <i>React Quickly </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/The-Road-to-learn-React.pdf" target="_blank"> <i> The Road to Learn React </i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Node.js-Web-Development.pdf" target="_blank"> <i> Node.js Web Development </i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Google-Web-Toolkit-book.pdf" target="_blank"> <i> Google Web Toolkit: A practical guide </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Node.js-Web-Development.pdf" target="_blank"> <i> Node.js Web Development </i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-Cookbook.pdf" target="_blank"> <i> Django Cookbook </i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-2.pdf" target="_blank"> <i> Django 2 </i></a></li>					
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-2.pdf" target="_blank"> <i> Django 2 </i></a></li>	-->				
 					</ul>
 					</div>
 				</div>
