links de livros e videoaulas de frameworks web

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -120,7 +120,7 @@
 					<div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/mars/2/eclipse-jee-mars-2-linux-gtk-x86_64.tar.gz" target="_blank">Link do Eclipse IDE Mars 2</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
 					 <li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
@@ -131,21 +131,22 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/LoginApp.zip"> Login GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/edu-blog.zip"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li> -->
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> Exemplo de Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaulas sobre AngularJS</a></li>
 					</ul>
 					</div> 
 					<div>
 					<b>Livros:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Google-Web-Toolkit-book.pdf" target="_blank"> <i> Google Web Toolkit: A practical guide </i></a></li>
-					<!-- <li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Pro-TypeScript.pdf" target="_blank"> <i> Pro TypeScript: Application-Scale JavaScript Development </i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Pro-TypeScript.pdf" target="_blank"> <i> Pro TypeScript: Application-Scale JavaScript Development </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/AngularJS-Essentials.pdf" target="_blank"> <i> Angular JS Essentials </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/React-Quickly.pdf" target="_blank"> <i>React Quickly </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/The-Road-to-learn-React.pdf" target="_blank"> <i> The Road to Learn React </i></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Node.js-Web-Development.pdf" target="_blank"> <i> Node.js Web Development </i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-Cookbook.pdf" target="_blank"> <i> Django Cookbook </i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-2.pdf" target="_blank"> <i> Django 2 </i></a></li>	-->				
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/books/Django-2.pdf" target="_blank"> <i> Django 2 </i></a></li>				
 					</ul>
 					</div>
 				</div>
