especificacao do trabalho 1 de Lab ES sobre Sistema de Academia

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho 1 - 20 pts <b>(08/04)</b></li>
+					<li>Trabalho 1 - 20 pts <b>(08/04)</b> - <img src="images/new2.gif" alt="" height="11" width="28"> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
 					<li>Trabalho 2 - 80 pts</li>
 						<ul>
 						<li>Definição dos grupos <b>(até 22/04)</b></li>
