--- a/gsi526.html
+++ b/gsi526.html
@@ -96,9 +96,9 @@
 					<div>
 						<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/01 - Introdução à Engenharia de Software.pdf"> Aula 01 - Introdução à Engenharia de Software</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 01 - Introdução à Engenharia de Software.pdf"> Aula 01 - Introdução à Engenharia de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - O Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
